--- a/cv.html
+++ b/cv.html
@@ -7,18 +7,25 @@
     <body >
         <section class = "header">
             <h1>Ziad Balbzioui</h1>
-            <p>Adresse:    </p>
-            <p>Téléphone: </p>
-            <p>Email:</p>
+            <p>Adresse:   270 rue de la Paix, 75000 Paris</p>
+            <p>Téléphone: 06 12 34 56 78</p>
+            <p>Email: ziad.balbzioui@etu.minesparis.psl.eu</p>
 
         </section>
         <section class = "experience">
             <h2>Expérience Professionnelle</h2>
-            <p>Stage chez Tech Solutions - Développeur Web (2023)</p>
+            <ul>
+                <li>Stage chez Apple - Développeur Web (2023)</li>
+                <li>Stage chez Google - Analyste de données (2022)</li>
+                <li>Stage chez Microsoft (2021)</li>
+            </ul>
         </section>
         <section class = "education">
             <h2>Formation</h2>
-            <p>Licence en Informatique - Université de Paris (2020-2023)</p>
+            <ul>
+                <li>Mines Paris (2025)</li >
+                <li>Lycée Kleber (2023)</li>
+            </ul>
         </section>
         <section class = "skills">
             <h2>Compétences</h2>
@@ -27,6 +34,35 @@
                 <li>Frameworks: React, Django</li>
                 <li>Outils: Git, Docker</li>
             </ul>
+        </section>
+        <section class = "projects">
+            <h2>Projets</h2>
+            <p>Projet de développement d'une application de gestion de tâches en React.</p>
+            <p>MIG prospectus</p>
+        </section>
+        
+        <section class="languages">
+            <h2>Langues</h2>
+            <div class="lang-container">
+                <div class="lang-item">
+                    <span>Français : Parfait</span>
+                    <div class="progress-bg">
+                        <div class="progress-bar" style="width: 100%;"></div>
+                    </div>
+                </div>
+                <div class="lang-item">
+                    <span>Anglais : Moyen / Avancé</span>
+                    <div class="progress-bg">
+                        <div class="progress-bar" style="width: 75%;"></div>
+                    </div>
+                </div>
+                <div class="lang-item">
+                    <span>Espagnol : Faible</span>
+                    <div class="progress-bg">
+                        <div class="progress-bar" style="width: 25%;"></div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
